homework/hm5/workspace/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: socheatha/my-spring-app:v0.02
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: homework
spec:
  selector:
    app: spring-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
